revisions for manuscript resubmission

--- a/src/CaseStudy.Rmd
+++ b/src/CaseStudy.Rmd
@@ -554,13 +554,14 @@ This can be done using the result of calibrate_aoa which used the relationship a
 
 ```{r userAOA_cv, warning=FALSE, message=FALSE, echo=FALSE,include=FALSE}
 
-if(nrow(model$trainingData>=250)){
-  window.size <- 10 # clustered has more data so a larger window size is possible
-}else{
-  window.size <- 5
-}
+#if(nrow(model$trainingData>=250)){
+#  window.size <- 10 # clustered has more data so a larger window size is possible
+#}else{
+#  window.size <- 5
+#}
+window.size <- 10
 
-AOA_new <- calibrate_aoa(AOA,model,window.size = 5,showPlot=FALSE)
+AOA_new <- calibrate_aoa(AOA,model,window.size = window.size,showPlot=FALSE)
 recl <- attributes(AOA_new$AOA)$calib$group_stats
 
 reference_perf <- as.data.frame(stack(AOA$DI,response,prediction))
@@ -580,10 +581,6 @@ reference_metric <- apply(slidingw,1,function(x){
 
 ```
 
-```{r figs7, echo=FALSE, out.width="100%",fig.cap="Relationship between the cross-validated DI and the RMSE using the cross-validation folds already used during model training. The RMSE was estimated using predictions and observed values within a window of DI values."}
-#include_graphics("../figures/AOA_calibrate_singleCV.pdf")
-```
-
 
 #### Using muliple CV's
 
@@ -595,12 +592,6 @@ We compare the relationship estimated by cross-validation with the true relation
 
 ```{r userAOA_multicv, warning=FALSE, message=FALSE, echo=FALSE,include=FALSE}
 
-
-if(nrow(model$trainingData>=250)){
-  window.size <- 50 # clustered has more data so a larger window size is possible
-}else{
-  window.size <- 10
-}
 
 AOA_new_MCV <- calibrate_aoa(AOA,model,multiCV=TRUE,length.out = 10,
                              window.size = window.size,showPlot=FALSE)
