--- a/src/Concept_figures.Rmd
+++ b/src/Concept_figures.Rmd
@@ -581,7 +581,7 @@ include_graphics("../figures/concept_figures/fullgradientcovered.pdf")
 
 ## Why can't we use the distance to all data points, or hulls, instead of distance to the nearest neighbor?
 
-The distance to all training points is not helpful here because then gaps could not be considered. But gaps are equally problematic (see our first figure in the manuscript) and using the average distance to training points cannot account for that. In the example below the new data point even has a lower average distance to training data although it is clearly in an area not covered by training data. The problem is similar for hulls, that do not take gaps in the predictor space into account.  
+The distance to all training points is not helpful here because gaps could not be considered. But gaps are equally problematic (see our first figure in the manuscript) and using the average distance to training points cannot account for that. In the example below the new data point even has a lower average distance to training data although it is clearly in an area not covered by training data. The problem is similar for hulls, that do not take gaps in the predictor space into account.  
 
 ```{r Fig_dist2all,include = FALSE}
 
